[package]
name = "throttled_body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.5"
bytes = "1.6.0"
http = "1.1.0"
http-body = "1.0.0"
http-body-util = "0.1.1"
pin-project = "1.1.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower = "0.4.13"
